--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,8 @@ h1 {
     color: rgb(273, 72, 50);
     background-color: rgb(248, 217, 209);
 }
+
+#map { 
+    height: 400px; 
+    width: 400px;
+}
