--- a/css/style-parking.css
+++ b/css/style-parking.css
@@ -1,44 +1,101 @@
-.header {
-    padding: 5%;
-    background: #000000;
-    color: rgb(255, 255, 255);
-    display: flex; 
-    justify-content: space-between;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-#logo h1 {
-    font-family: 'Abril Fatface';
-    font-weight: 400px ; 
-    font-size: 55px; 
+a {
+  color: #fff;
+  text-decoration: none;
+  transition: 0.3s;
 }
 
-.container {
-    color: rgb(255, 255, 255);
+a:hover {
+  opacity: 0.7;
+}
+
+.logo {
+  width: 684px;
+  height: 104px;
+  left: 84px;
+  top: 75px;
+  font-family: "Abril Fatface";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 86px;
+  color: #ffffff;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
+  background: #23232e;
+  height: 20vh;
+}
+
+.nav-list {
+  list-style: none;
+  display: flex;
+}
+
+.nav-list li {
+  letter-spacing: 3px;
+  margin-left: 32px;
+}
+@media (max-width: 999px) {
+  body {
+    overflow-x: hidden;
+  }
+  .nav-list {
     position: absolute;
-    font-family: 'Poppins', sans-serif;
-    display: flex;
-    justify-content: row;
-    justify-content: space-between;
-    height: 80px;
-    line-height: 80px; 
-    list-style: none;
+    top: 8vh;
+    right: 0;
+    width: 50vw;
+    height: 92vh;
+    background: #23232e;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in;
+  }
+  .nav-list li {
+    margin-left: 0;
+    opacity: 0;
+  }
+  .mobile-menu {
+    display: block;
+  }
 }
 
-.nav:hover{
-    background-color: grey;
+.nav-list.active {
+  transform: translateX(0);
 }
 
-#map { 
-    height: 400px; 
-    width: 400px;
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+#map {
+  height: 400px;
+  width: 400px;
 }
 
 .bloc {
-    background-color: grey;
-    font-family: 'Poppins', sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    width: 40%;
-    height: 50%;
+  background-color: grey;
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  width: 40%;
+  height: 50%;
 }
