adjust map size

--- a/css/style-map.css
+++ b/css/style-map.css
@@ -1,6 +1,6 @@
 #map { 
-    height: 42rem; 
-    width: 100rem;
+    height: 600px; 
+    width: 1200px;
     /* center in middle of page and round border */
     margin: 0 auto;
     margin-top: 20px;
