--- a/css/projet-style.css
+++ b/css/projet-style.css
@@ -118,6 +118,16 @@
     text-align: center;
     color: #000000;
   }
+  .search {
+    position: absolute;
+    width: 258px;
+    height: 39px;
+    left: 154px;
+    top: 400px;
+    background: #D9D9D9;
+    border: none;
+    border-radius: 17px;
+  }  
   .carlogo {
     position: absolute;
     width: 142px;
