--- a/css/projet-style.css
+++ b/css/projet-style.css
@@ -1,124 +1,127 @@
 * {
-    margin: 0;
-    padding: 0;
-    background-color: rgba(209, 18, 142, 0);
-  }
-  
-  a {
-    color: #fff;
-    text-decoration: none;
-    transition: 0.3s;
-  }
-  
-  a:hover {
-    opacity: 0.7;
-  }
-  
-  .logo {
-    width: 684px;
-    height: 104px;
-    left: 84px;
-    top: 75px;
-    font-family: 'Abril Fatface';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 64px;
-    line-height: 86px;
-    color: #FFFFFF;
-  }
-  
-  nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
-    background: #23232e;
-    height: 20vh;
-  }
-  
-  .city {
+  margin: 0;
+  padding: 0;
+  background-color: rgba(209, 18, 142, 0);
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+a:hover {
+  opacity: 0.7;
+}
+
+.logo {
+  width: 684px;
+  height: 104px;
+  left: 84px;
+  top: 75px;
+  font-family: "Abril Fatface";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 86px;
+  color: #ffffff;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
+  background: #23232e;
+  height: 20vh;
+}
+
+/* .city {
     position: absolute;
-    width: 60%;
+    width: 100%;
     height: 78%;
     max-width: 980px;
     left: 40%;
     top: 150px;
+    width: 100%;
+  } */
+
+.nav-list {
+  list-style: none;
+  display: flex;
+}
+
+.nav-list li {
+  letter-spacing: 3px;
+  margin-left: 32px;
+}
+@media (max-width: 999px) {
+  body {
+    overflow-x: hidden;
   }
   .nav-list {
-    list-style: none;
-    display: flex;
+    position: absolute;
+    top: 8vh;
+    right: 0;
+    width: 50vw;
+    height: 92vh;
+    background: #23232e;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in;
   }
-  
   .nav-list li {
-    letter-spacing: 3px;
-    margin-left: 32px;
+    margin-left: 0;
+    opacity: 0;
   }
-  @media (max-width: 999px) {
-    body {
-      overflow-x: hidden;
-    }
-    .nav-list {
-      position: absolute;
-      top: 8vh;
-      right: 0;
-      width: 50vw;
-      height: 92vh;
-      background: #23232e;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-around;
-      transform: translateX(100%);
-      transition: transform 0.3s ease-in;
-    }
-    .nav-list li {
-      margin-left: 0;
-      opacity: 0;
-    }
+}
+
+.nav-list.active {
+  transform: translateX(0);
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
   }
-  
-  .nav-list.active {
+  to {
+    opacity: 1;
     transform: translateX(0);
   }
-  
-  @keyframes navLinkFade {
-    from {
-      opacity: 0;
-      transform: translateX(50px);
-    }
-    to {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  }
-  .format1 {
-    position: absolute;
+}
+
+.format1 {
+  /* position: absolute;
     width: 418px;
     height: 80px;
     left: 74px;
-    top: 200px;
-    font-family: 'Abril Fatface';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 32px;
-    line-height: 43px;
-    text-align: center;
-    color: #000000;
-  }
-  .format2 {
-    position: absolute;
+    top: 200px; */
+  font-family: "Abril Fatface";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 43px;
+  text-align: center;
+  color: #000000;
+}
+.format2 {
+  /* position: absolute;
     width: 375px;
     height: 127px;
     left: 96px;
-    top: 320px;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 36px;
-    text-align: center;
-    color: #000000;
-  }
-  .search {
+    top: 320px; */
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+  text-align: center;
+  color: #000000;
+}
+/* .search {
     position: absolute;
     width: 258px;
     height: 39px;
@@ -127,26 +130,88 @@
     background: #D9D9D9;
     border: none;
     border-radius: 17px;
-  }  
-  .carlogo {
-    position: absolute;
-    width: 142px;
-    height: 140px;
-    left: 0px;
-    top: 500px;
-    /* Animation left to right */
-    animation: slide 5s infinite;
-  }
+  }   */
 
+.carlogo {
+  position: absolute; 
+  width: 142px;
+  height: 140px;
+  left: 0px;
+  top: 600px;
   /* Animation left to right */
-  @keyframes slide {
-    0% {
-      transform: translateX(0);
-    }
-    50% {
-      transform: translateX(500px);
-    }
-    100% {
-      transform: translateX(0);
-    }
+  animation: slide 5s infinite;
+}
+
+/* Animation left to right */
+@keyframes slide {
+  0% {
+    transform: translateX(0);
   }
+  50% {
+    transform: translateX(500px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+/*bouton de sélection */
+/*création des deux div au centre pour responsivité*/
+
+.centrepage {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  width: 40%;
+  padding: 3em;
+}
+
+.imageaccueil {
+  width: 55%;
+}
+
+.city {
+  width: 100%;
+  max-width: 980px;
+  left: 40%;
+}
+
+.deroulant {
+  font-family: "Poppins", sans-serif;
+  background-color: #aeaeae;
+  top: 500px;
+  width: 40%;
+  list-style-type: none;
+  border-radius: 10px;
+}
+
+.deroulant ul li {
+  width: 100%;
+  text-align: center;
+  list-style-type: none;
+}
+
+.deroulant ul::after {
+  content: "";
+  display: table;
+  clear: both;
+} 
+
+.deroulant a {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  border-bottom: 2px solid transparent;
+  padding: 10px 0px;
+}
+
+.deroulant a:hover {
+  color: rgb(30, 73, 116);
+}
