--- a/css/projet-style.css
+++ b/css/projet-style.css
@@ -171,7 +171,6 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
 }
 
 .main {
@@ -180,7 +179,8 @@ nav {
   text-align: center;
   align-items: center;
   width: 40%;
-  padding: 3em;
+  margin-top: 30px;
+  padding: 1em;
 }
 
 .imageaccueil {
