--- a/css/style-parking.css
+++ b/css/style-parking.css
@@ -118,3 +118,59 @@ nav {
   margin: 1em;
   padding: 20px;
 }
+
+.search {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 30px;
+}
+
+.deroulant {
+  font-family: "Poppins", sans-serif;
+  background-color: #aeaeae;
+  top: 500px;
+  width: 40%;
+  list-style-type: none;
+  border-radius: 10px;
+}
+
+.deroulant a {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  border-bottom: 2px solid transparent;
+  padding: 10px 0px;
+}
+
+.deroulant {
+  font-family: "Poppins", sans-serif;
+  background-color: #aeaeae;
+  top: 500px;
+  width: 40%;
+  list-style-type: none;
+  border-radius: 10px;
+}
+
+.deroulant a {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  border-bottom: 2px solid transparent;
+  padding: 10px 0px;
+}
+
+.deroulant ul li {
+  width: 100%;
+  text-align: center;
+  list-style-type: none;
+  display: none;
+}
+
+.deroulant a:hover {
+  color: rgb(30, 73, 116);
+}
+
+.deroulant ul li:hover {
+  display: block;
+}
